--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ p {
     background: #43f1cc;
     padding: 20px;
 }
+
+a {
+    padding: 16px;
+    background: #666464;
+    border-radius: 8px;
+    border: 1px solid #000;
+}
